ExprParser.py
# Generated from Expr.g4 by ANTLR 4.11.1
# encoding: utf-8
import sys

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class ExprParser(Parser):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "';'",
        "'='",
        "'('",
        "')'",
        "','",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "LET",
        "PRINT",
        "PUSH",
        "POP",
        "EQUAL",
        "ADD",
        "SUB",
        "MUL",
        "DIV",
        "NEWLINE",
        "VAR",
        "STRING",
        "INT",
        "WS",
    ]

    RULE_prog = 0
    RULE_statement = 1
    RULE_letStatement = 2
    RULE_printStatement = 3
    RULE_pushStatement = 4
    RULE_equalStatement = 5
    RULE_expr = 6

    ruleNames = [
        "prog",
        "statement",
        "letStatement",
        "printStatement",
        "pushStatement",
        "equalStatement",
        "expr",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    LET = 6
    PRINT = 7
    PUSH = 8
    POP = 9
    EQUAL = 10
    ADD = 11
    SUB = 12
    MUL = 13
    DIV = 14
    NEWLINE = 15
    VAR = 16
    STRING = 17
    INT = 18
    WS = 19

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext, i)

        def getRuleIndex(self):
            return ExprParser.RULE_prog

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProg"):
                listener.enterProg(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProg"):
                listener.exitProg(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProg"):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)

    def prog(self):

        localctx = ExprParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.statement()
                self.state = 17
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 34240) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return ExprParser.RULE_statement

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class EqualContext(StatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def equalStatement(self):
            return self.getTypedRuleContext(ExprParser.EqualStatementContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEqual"):
                listener.enterEqual(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEqual"):
                listener.exitEqual(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEqual"):
                return visitor.visitEqual(self)
            else:
                return visitor.visitChildren(self)

    class PrintContext(StatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def printStatement(self):
            return self.getTypedRuleContext(ExprParser.PrintStatementContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPrint"):
                listener.enterPrint(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPrint"):
                listener.exitPrint(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPrint"):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)

    class BlankStatementContext(StatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(ExprParser.NEWLINE, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBlankStatement"):
                listener.enterBlankStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBlankStatement"):
                listener.exitBlankStatement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBlankStatement"):
                return visitor.visitBlankStatement(self)
            else:
                return visitor.visitChildren(self)

    class LetContext(StatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def letStatement(self):
            return self.getTypedRuleContext(ExprParser.LetStatementContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLet"):
                listener.enterLet(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLet"):
                listener.exitLet(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLet"):
                return visitor.visitLet(self)
            else:
                return visitor.visitChildren(self)

    class PushContext(StatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pushStatement(self):
            return self.getTypedRuleContext(ExprParser.PushStatementContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPush"):
                listener.enterPush(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPush"):
                listener.exitPush(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPush"):
                return visitor.visitPush(self)
            else:
                return visitor.visitChildren(self)

    def statement(self):

        localctx = ExprParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                localctx = ExprParser.LetContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.letStatement()
                self.state = 20
                self.match(ExprParser.T__0)
            elif token in [7]:
                localctx = ExprParser.PrintContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 22
                self.printStatement()
                self.state = 23
                self.match(ExprParser.T__0)
            elif token in [8]:
                localctx = ExprParser.PushContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 25
                self.pushStatement()
                self.state = 26
                self.match(ExprParser.T__0)
            elif token in [10]:
                localctx = ExprParser.EqualContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 28
                self.equalStatement()
                self.state = 29
                self.match(ExprParser.T__0)
            elif token in [15]:
                localctx = ExprParser.BlankStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 31
                self.match(ExprParser.NEWLINE)
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LetStatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return ExprParser.RULE_letStatement

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class LetPopFuncContext(LetStatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.LetStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(ExprParser.LET, 0)

        def VAR(self):
            return self.getToken(ExprParser.VAR, 0)

        def POP(self):
            return self.getToken(ExprParser.POP, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLetPopFunc"):
                listener.enterLetPopFunc(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLetPopFunc"):
                listener.exitLetPopFunc(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLetPopFunc"):
                return visitor.visitLetPopFunc(self)
            else:
                return visitor.visitChildren(self)

    class LetEqualStatementContext(LetStatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.LetStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(ExprParser.LET, 0)

        def VAR(self):
            return self.getToken(ExprParser.VAR, 0)

        def equalStatement(self):
            return self.getTypedRuleContext(ExprParser.EqualStatementContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLetEqualStatement"):
                listener.enterLetEqualStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLetEqualStatement"):
                listener.exitLetEqualStatement(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLetEqualStatement"):
                return visitor.visitLetEqualStatement(self)
            else:
                return visitor.visitChildren(self)

    class LetExprFuncContext(LetStatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.LetStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(ExprParser.LET, 0)

        def VAR(self):
            return self.getToken(ExprParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLetExprFunc"):
                listener.enterLetExprFunc(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLetExprFunc"):
                listener.exitLetExprFunc(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLetExprFunc"):
                return visitor.visitLetExprFunc(self)
            else:
                return visitor.visitChildren(self)

    def letStatement(self):

        localctx = ExprParser.LetStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_letStatement)
        try:
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                localctx = ExprParser.LetExprFuncContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(ExprParser.LET)
                self.state = 35
                self.match(ExprParser.VAR)
                self.state = 36
                self.match(ExprParser.T__1)
                self.state = 37
                self.expr(0)

            elif la_ == 2:
                localctx = ExprParser.LetPopFuncContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.match(ExprParser.LET)
                self.state = 39
                self.match(ExprParser.VAR)
                self.state = 40
                self.match(ExprParser.T__1)
                self.state = 41
                self.match(ExprParser.POP)
                self.state = 42
                self.match(ExprParser.T__2)
                self.state = 43
                self.match(ExprParser.T__3)

            elif la_ == 3:
                localctx = ExprParser.LetEqualStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.match(ExprParser.LET)
                self.state = 45
                self.match(ExprParser.VAR)
                self.state = 46
                self.match(ExprParser.T__1)
                self.state = 47
                self.equalStatement()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrintStatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return ExprParser.RULE_printStatement

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class PrintFuncContext(PrintStatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.PrintStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(ExprParser.PRINT, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPrintFunc"):
                listener.enterPrintFunc(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPrintFunc"):
                listener.exitPrintFunc(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPrintFunc"):
                return visitor.visitPrintFunc(self)
            else:
                return visitor.visitChildren(self)

    def printStatement(self):

        localctx = ExprParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_printStatement)
        try:
            localctx = ExprParser.PrintFuncContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(ExprParser.PRINT)
            self.state = 51
            self.match(ExprParser.T__2)
            self.state = 52
            self.expr(0)
            self.state = 53
            self.match(ExprParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PushStatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return ExprParser.RULE_pushStatement

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class PushFuncContext(PushStatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.PushStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PUSH(self):
            return self.getToken(ExprParser.PUSH, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPushFunc"):
                listener.enterPushFunc(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPushFunc"):
                listener.exitPushFunc(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPushFunc"):
                return visitor.visitPushFunc(self)
            else:
                return visitor.visitChildren(self)

    def pushStatement(self):

        localctx = ExprParser.PushStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_pushStatement)
        try:
            localctx = ExprParser.PushFuncContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(ExprParser.PUSH)
            self.state = 56
            self.match(ExprParser.T__2)
            self.state = 57
            self.expr(0)
            self.state = 58
            self.match(ExprParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EqualStatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return ExprParser.RULE_equalStatement

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class EqualFuncContext(EqualStatementContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.EqualStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EQUAL(self):
            return self.getToken(ExprParser.EQUAL, 0)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEqualFunc"):
                listener.enterEqualFunc(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEqualFunc"):
                listener.exitEqualFunc(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEqualFunc"):
                return visitor.visitEqualFunc(self)
            else:
                return visitor.visitChildren(self)

    def equalStatement(self):

        localctx = ExprParser.EqualStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_equalStatement)
        try:
            localctx = ExprParser.EqualFuncContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ExprParser.EQUAL)
            self.state = 61
            self.match(ExprParser.T__2)
            self.state = 62
            self.expr(0)
            self.state = 63
            self.match(ExprParser.T__4)
            self.state = 64
            self.expr(0)
            self.state = 65
            self.match(ExprParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return ExprParser.RULE_expr

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class StringContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(ExprParser.STRING, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterString"):
                listener.enterString(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitString"):
                listener.exitString(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitString"):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)

    class MuldivExprContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.op = None  # Token
            self.copyFrom(ctx)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext, i)

        def MUL(self):
            return self.getToken(ExprParser.MUL, 0)

        def DIV(self):
            return self.getToken(ExprParser.DIV, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMuldivExpr"):
                listener.enterMuldivExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMuldivExpr"):
                listener.exitMuldivExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMuldivExpr"):
                return visitor.visitMuldivExpr(self)
            else:
                return visitor.visitChildren(self)

    class VarContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(ExprParser.VAR, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVar"):
                listener.enterVar(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVar"):
                listener.exitVar(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVar"):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)

    class AddsubExprContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.op = None  # Token
            self.copyFrom(ctx)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext, i)

        def ADD(self):
            return self.getToken(ExprParser.ADD, 0)

        def SUB(self):
            return self.getToken(ExprParser.SUB, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAddsubExpr"):
                listener.enterAddsubExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAddsubExpr"):
                listener.exitAddsubExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAddsubExpr"):
                return visitor.visitAddsubExpr(self)
            else:
                return visitor.visitChildren(self)

    class ParensExprContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParensExpr"):
                listener.enterParensExpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParensExpr"):
                listener.exitParensExpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParensExpr"):
                return visitor.visitParensExpr(self)
            else:
                return visitor.visitChildren(self)

    class IntContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterInt"):
                listener.enterInt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitInt"):
                listener.exitInt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitInt"):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)

    def expr(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.ExprContext(self, self._ctx, _parentState)
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                localctx = ExprParser.IntContext(self, localctx)
                self._ctx = localctx

                self.state = 68
                self.match(ExprParser.INT)
            elif token in [16]:
                localctx = ExprParser.VarContext(self, localctx)
                self._ctx = localctx
                self.state = 69
                self.match(ExprParser.VAR)
            elif token in [17]:
                localctx = ExprParser.StringContext(self, localctx)
                self._ctx = localctx
                self.state = 70
                self.match(ExprParser.STRING)
            elif token in [3]:
                localctx = ExprParser.ParensExprContext(self, localctx)
                self._ctx = localctx
                self.state = 71
                self.match(ExprParser.T__2)
                self.state = 72
                self.expr(0)
                self.state = 73
                self.match(ExprParser.T__3)
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 85
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 5, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    self.state = 83
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.MuldivExprContext(
                            self, ExprParser.ExprContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 77
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 6)"
                            )
                        self.state = 78
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not (_la == 13 or _la == 14):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 79
                        self.expr(7)

                    elif la_ == 2:
                        localctx = ExprParser.AddsubExprContext(
                            self, ExprParser.ExprContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_expr
                        )
                        self.state = 80
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 5)"
                            )
                        self.state = 81
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not (_la == 11 or _la == 12):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 82
                        self.expr(6)

                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 5, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    def sempred(self, localctx: RuleContext, ruleIndex: int, predIndex: int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx: ExprContext, predIndex: int):
        if predIndex == 0:
            return self.precpred(self._ctx, 6)

        if predIndex == 1:
            return self.precpred(self._ctx, 5)
